<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SelectDetails">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPria"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/cvWanita"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:drawablePadding="5sp"
            android:padding="10dp"
            android:text="@string/pria"
            android:textAlignment="center"
            android:textColor="@color/tint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/male" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWanita"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvPria"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWanita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:drawablePadding="5sp"
            android:padding="10dp"
            android:text="@string/wanita"
            android:textAlignment="center"
            android:textColor="@color/tint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/female" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="@id/cvPria"
        app:layout_constraintRight_toRightOf="@id/cvWanita"
        app:layout_constraintTop_toBottomOf="@+id/cvPria"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tinggi_badan"
                android:textColor="#8D8E99"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTinggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0cm"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/Seekbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="200"
                android:progressBackgroundTint="#888994"
                android:progressTint="@android:color/white"
                tools:targetApi="lollipop" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBerat"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/cvUsia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTinggi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berat_badan"
                android:textColor="#8D8E99"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBerat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_50"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/berat_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/stepper_background">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/minus"
                        android:padding="14dp"
                        app:srcCompat="@drawable/substract" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/berat_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/stepper_background">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/plus"
                        android:padding="3dp"
                        app:srcCompat="@drawable/ic_add" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUsia"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cvBerat"
        app:layout_constraintTop_toBottomOf="@+id/cvTinggi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/usia"
                android:textColor="#8D8E99"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUsia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_19"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/usia_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/stepper_background">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/minus"
                        android:padding="14dp"
                        app:srcCompat="@drawable/substract" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/usia_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/stepper_background">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/plus"
                        android:padding="3dp"
                        app:srcCompat="@drawable/ic_add" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnHitung"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="#E91E63"
        android:text="@string/hitung_hasil"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvBerat" />


</androidx.constraintlayout.widget.ConstraintLayout>